--- a/src/styles/base/_icons.scss
+++ b/src/styles/base/_icons.scss
@@ -29,6 +29,15 @@
 .icon-sort-alpha-asc:before {
   content: '\ea48';
 }
+
 .icon-sort-alpha-desc:before {
   content: '\ea49';
+}
+
+.icon-cross:before {
+  content: '\ea0f';
+}
+
+.icon-plus:before {
+  content: '\ea0a';
 }
